--- a/operator/config/rbac/role.yaml
+++ b/operator/config/rbac/role.yaml
@@ -8,6 +8,7 @@ rules:
   - infrastructure.cloudprovider.io
   resources:
   - instances
+  - instancestacks
   verbs:
   - create
   - delete
@@ -20,12 +21,14 @@ rules:
   - infrastructure.cloudprovider.io
   resources:
   - instances/finalizers
+  - instancestacks/finalizers
   verbs:
   - update
 - apiGroups:
   - infrastructure.cloudprovider.io
   resources:
   - instances/status
+  - instancestacks/status
   verbs:
   - get
   - patch
