instancestack 으로 api 변경 및 테스트완료

--- a/operator/config/samples/instancestack.yaml
+++ b/operator/config/samples/instancestack.yaml
@@ -1,5 +1,5 @@
 apiVersion: infrastructure.cloudprovider.io/v1alpha1
-kind: Instance
+kind: InstanceStack
 metadata:
   labels:
     app.kubernetes.io/name: operator
